# dream

./: .clang-format  .gitignore  CMakeLists.txt  CodeOfConduct.md  README.md  TODO.md  compile  compile.log~  compile_commands.json  config.yml  environment.yml  format.sh  gen_asm.sh  gen_parser.sh  main.drm  qodana.yaml  test.drm  test.sh  test2.drm  tmp
.cache/clangd/index/: ASTNode.cpp.066E73FC40539797.idx  ASTNode.h.F41521172CC3A760.idx  codeGen_inter.cpp.C6671765B93856BE.idx  codeGen_inter.h.99A8274466A227A4.idx  codeGen_mechine.cpp.9329EAA45CE526BF.idx  codeGen_mechine.h.50D27B7714C43518.idx  config.cpp.0BB19B30418B2DF3.idx  config.h.F43A870A69A93B5E.idx  data_struct_util.cpp.B65BA34612CDEBB3.idx  data_struct_util.h.6A1549DBAFE9FFBD.idx  define_d.h.808E10CC882BBA87.idx  file_util.cpp.A2748AAF156658F4.idx  file_util.h.F09E332B300422DE.idx  includeAnaylize.cpp.063F2E67B5C99F21.idx  includeAnaylize.h.1755DB5866A94C49.idx  llvm_util.cpp.C27D7BF905A37C76.idx  llvm_util.h.989370BED30871D7.idx  log_util.cpp.41481499A5C33753.idx  log_util.h.E395C14EF4E395C3.idx  main.cpp.4E63F22FC2FFCE9E.idx  metadata.cpp.10D1AADD7FFFF731.idx  metadata.h.F6F4CD644C5753D7.idx  name_format_util.cpp.AF256CB7D32DA567.idx  name_format_util.h.83DC9131FF61212A.idx  obj_util.cpp.494CBAAE4E09EA47.idx  obj_util.h.82A9D9B3E8A43615.idx  parser.cpp.0E650679C98F76BC.idx  parser.hpp.A9B689DF90F621ED.idx  parserMain.cpp.F4EC69221775B416.idx  parserMain.h.85C6A2EBC57B9E59.idx  reserve.h.02B521D7741FA499.idx  string_util.cpp.01E66D9487336C6D.idx  string_util.h.ABFB2CFEAD9AE196.idx  syntax_check_util.cpp.B7A1E3F3E9CBD772.idx  syntax_check_util.h.1D60EB3D295068B3.idx  token.cpp.C9CE27DAE75A6375.idx  variableCheck.cpp.BB993047A71B35E0.idx  variableCheck.h.755A2C12BB137D8B.idx
.fleet/: run.json
.github/workflows/: code_quality.yml  qodana_code_quality.yml
compiler/: .clang-format  CMakeLists.txt  format.sh  main.cpp
compiler/common/: config.cpp  config.h  define_d.h  reserve.h
compiler/inter_gen/: codeGen_inter.cpp  codeGen_inter.h  codegen_inter.cpp  codegen_inter.h  globalInterInfo.cpp  globalInterInfo.h  metadata.cpp  metadata.h
compiler/inter_gen/check/: variableCheck.cpp  variableCheck.h
compiler/inter_gen/preprocessing/: includeAnaylize.cpp  includeAnaylize.h
compiler/machine_gen/: codeGen_mechine.cpp  codeGen_mechine.h
compiler/parser/: ASTNode.cpp  ASTNode.h  astNode.cpp  astNode.h  parser.cpp  parser.hpp  parser.y  parserMain.cpp  parserMain.h  token.cpp  token.l
compiler/utilities/: data_struct_util.h  file_util.cpp  file_util.h  llvm_util.cpp  llvm_util.h  log_util.cpp  log_util.h  name_format_util.cpp  name_format_util.h  obj_util.cpp  obj_util.h  string_util.cpp  string_util.h  syntax_check_util.cpp  syntax_check_util.h
dap/: main.dap
dap-test/: first-step-test.dap  test-all.py  test.kt
dap-test/full-test/: test-all.py  test_res.py  util.py
dap-test/full-test/control/: for_test.dap  if_test.dap  test_syntax.py
dap-test/full-test/functional/: funCall_test.dap
dap-test/full-test/syntax/: control_test.dap  nullable_test.dap  test_syntax.py  type_base_test.dap  type_test.dap
dap-test/mutable/: mutable_test.dap  mutable_test.py
dap/runtime/gc/: DGC.dap
dap/runtime/mem/: mem.dap
dap/runtime/sys/: sysFun.dap
dap/std/io/: input.dap  output.dap
dap/std/type/: string_d.dap
doc/: What is dream?.md  dream-struct.drawio.html
doc/gc/: include.md
docs/about/: CodeOfConduct.md  LICENSE  TODO.md  WHAT_TO_DO.md  lang-reference.md  notes.md
docs/dev/: readme.md
docs/tutorial/: a.out  first-step.md  lang-reference.md  lex.yy.c  second-step-lex&parse.md  test-flex.l
docs/tutorial/second-step/: CMakeLists.txt  ast.cpp  ast.hpp  lex.cpp  lex.l  parser.cpp  parser.hpp  parser.y  run.sh
docs/zh-CN/about/: CodeOfConduct-zh.md
docs/zh-CN/dev/: readme.md
docs/zh-CN/tutorial/: first-step.md
dream/: main.drm  temp.drm
dream/net/: URL.drm  socket.drm
dream/stl/: Vector.drm  vector.drm
dream/test/: Test.drm  test.drm
libs/antlr4-runtime/: ANTLRErrorListener.h  ANTLRErrorStrategy.h  BailErrorStrategy.h  BufferedTokenStream.h  DefaultErrorStrategy.h  DiagnosticErrorListener.h  FailedPredicateException.h  InterpreterRuleContext.h  NoViableAltException.h  Parser.h  ParserInterpreter.h  ParserRuleContext.h  RecognitionException.h  Recognizer.h  RuntimeMetaData.h  Token.h  TokenFactory.h  TokenSource.h  TokenStreamRewriter.h  UnbufferedCharStream.h  Vocabulary.h
proj/: main.drm
proj/handler/: get_file.drm
src/: main.cpp
src/common/: dream_const.cpp  dream_const.h  dream_define.cpp  dream_define.h  dval_enum.h  enum.h  native_fun.cpp  native_fun.h  reserve.cpp  reserve.h  reserved.cpp  reserved.h
src/compile/: Compiler.cpp  Compiler.h
src/compiler/: Compiler.cpp  Compiler.h  NativeConverter.cpp  NativeConverter.h
src/core/: main.cpp  readme.md
src/dap/: main.dap  main.drm
src/dream/: main.drm
src/gc/: DataSource.cpp  DataSource.h  ObjectSource.cpp  ObjectSource.h  gc.cpp  gc.h
src/model/: Package.cpp  enum.h  reserved.cpp  reserved.h  val.cpp  val.h
src/natives/: Exception.cpp  Exception.h
src/parse/: Dream copy.g4  Dream.g4  Dream.interp  Dream.tokens  DreamBaseListener.cpp  DreamBaseListener.h  DreamCommonParserListener.cpp  DreamCommonParserListener.h  DreamLexer.cpp  DreamLexer.h  DreamLexer.interp  DreamLexer.tokens  DreamListener.cpp  DreamListener.h  DreamParser.cpp  DreamParser.h  DreamParserListener.cpp  DreamParserListener.h  DreamParserListenerCompiler.cpp  DreamParserListenerCompiler.h  DreamParserListenerRunner.cpp  DreamParserListenerRunner.h
src/util/: check.cpp  check.h  common_util.cpp  common_util.h  file_util.cpp  file_util.h  gc_relative_util.cpp  gc_relative_util.h  parse_util.cpp  parse_util.h  parser_util.cpp  parser_util.h  response_util.cpp  response_util.h  string_util.cpp  string_util.h
test/: a.out  main.cpp
test/time/: data_pool_data_trans_test.cpp  data_pool_test.cpp  object_assign_test.cpp  object_create_test.cpp
tests/compiler/: config.py  test-all.py  test_res.py  util.py
tests/dap_test/: test-all.py
(+194 files in other folders)
