cmake_minimum_required(VERSION 3.29)
project(dream)

set(CMAKE_CXX_STANDARD 20)
include_directories(
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/libs/antlr4-runtime
)

find_library(LIBANTLR NAMES libantlr4-runtime.so
            HINTS /usr/lib /usr/include /usr/lib64  )

add_executable(dream src/main.cpp

        src/compiler/Compiler.cpp
        src/compiler/Compiler.h
        src/parse/DreamBaseListener.cpp
        src/parse/DreamLexer.cpp
        src/parse/DreamListener.cpp
        src/parse/DreamParser.cpp
        src/parse/DreamParser.h
        src/parse/DreamListener.h
        src/parse/DreamLexer.h
        src/parse/DreamBaseListener.h
        src/parse/DreamParserListenerCompiler.cpp
        src/parse/DreamParserListenerCompiler.h
        src/util/file_util.cpp
        src/util/file_util.h
        src/common/reserve.cpp
        src/common/reserve.h
        src/compiler/gen/CodeGenerator.cpp
        src/compiler/gen/CodeGenerator.h
        src/util/string_util.cpp
        src/util/string_util.h
        src/parse/DreamParserListenerCompiler.cpp
        src/parse/DreamParserListenerCompiler.h
        src/obj/Global.cpp
        src/obj/Global.h
        src/util/response_util.cpp
        src/util/response_util.h
        src/obj/Hierarchy.cpp
        src/obj/Hierarchy.h
        src/runtime/gc/DataCopy.h
        src/runtime/gc/DataCopy.cpp
        src/runtime/class/Object.cpp
        src/runtime/class/Object.h
        src/natives/thread/thread.cpp
        src/natives/thread/thread.h
        src/common/dream_define.cpp
        src/common/dream_define.h
        src/common/dream_const.cpp
        src/common/dream_const.h
        src/natives/exception/Exception.cpp
        src/natives/exception/Exception.h
        src/runtime/reserve/d_define.h
        src/runtime/reserve/Finally.cpp
        src/runtime/reserve/Finally.h
        src/compiler/gen/ClassCodeGenerator.cpp
        src/compiler/gen/ClassCodeGenerator.h
        src/compiler/NativeConverter.cpp
        src/compiler/NativeConverter.h
        src/natives/net/Socket.cpp
        src/runtime/gc/DataPath.cpp
        src/runtime/gc/DataPath.h
        src/runtime/gc/GCable.cpp
        src/runtime/gc/GCable.h
        src/runtime/run/ExecuteUnit.cpp
        src/runtime/run/ExecuteUnit.h
        src/runtime/run/ExecutePool.cpp
        src/runtime/run/ExecutePool.h
        src/runtime/global/global_runtime_depen.cpp
        src/runtime/global/global_runtime_depen.h
        src/runtime/common/common_const.cpp
        src/runtime/common/common_const.h
        src/util/parser_util.cpp
        src/util/parser_util.h
        src/compiler/gen/StructDataCodeGenerator.cpp
        src/compiler/gen/StructDataCodeGenerator.h
        src/compiler/gen/FunVarGenerator.cpp
        src/compiler/gen/FunVarGenerator.h
        src/compiler/gen/FileVarGenerator.cpp
        src/compiler/gen/FileVarGenerator.h
        src/compiler/gen/FunGenerator.cpp
        src/compiler/gen/FunGenerator.h
        src/compiler/gen/ClassFunGenerator.cpp
        src/compiler/gen/ClassFunGenerator.h
        src/runtime/gc/DataNode.cpp
        src/runtime/gc/DataNode.h
        src/runtime/gc/DataRoot.cpp
        src/runtime/gc/DataRoot.h
        src/runtime/gc/FunDataRoot.cpp
        src/runtime/gc/FunDataRoot.h
        src/compiler/gen/FileStructGenerator.cpp
        src/compiler/gen/FileStructGenerator.h
        src/compiler/gen/ClassStructGenerator.cpp
        src/compiler/gen/ClassStructGenerator.h
        src/natives/net/Socket.h
        src/compiler/gen/ClassVarGenerator.cpp
        src/compiler/gen/ClassVarGenerator.h
        src/util/gc_relative_util.cpp
        src/util/gc_relative_util.h
        src/compiler/gen/FunDataRootGenerator.cpp
        src/compiler/gen/FunDataRootGenerator.h
        src/compiler/gen/GCStartGenerator.cpp
        src/compiler/gen/GCStartGenerator.h
        src/runtime/dbg/debug_util.cpp
        src/runtime/dbg/debug_util.h
        test/time/hash_vector_cmp.cpp
        src/compiler/gen/DataNodeGenerator.cpp
        src/compiler/gen/DataNodeGenerator.h
        src/natives/net/SocketServer.cpp
        src/natives/net/SocketServer.h
        src/natives/io/FileBaseClass.cpp
        src/natives/io/FileBaseClass.h
        src/natives/system/System.cpp
        src/natives/system/System.h
        src/natives/io/File.cpp
        src/natives/io/File.h
)

target_link_libraries(dream ${LIBANTLR})
